--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
   },
   "homepage": "https://github.com/LambdaSchool/node-server-testing#readme",
   "devDependencies": {
+    "crossenv": "0.0.2-security",
     "jest": "^24.9.0",
+    "nodemon": "^1.19.2",
     "supertest": "^4.0.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "knex": "^0.19.4",
+    "sqlite3": "^4.1.0"
   }
 }
