--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "node-server-testing",
   "version": "1.0.0",
   "description": "Node Server Testing Challenge",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "cross-env DB_ENV=testing jest --watch",
-    "start": "node index.js",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "test": "cross-env DEB_ENV=testing jest --watch",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,16 +19,16 @@
     "url": "https://github.com/LambdaSchool/node-server-testing/issues"
   },
   "homepage": "https://github.com/LambdaSchool/node-server-testing#readme",
-  "devDependencies": {
-    "cross-env": "^6.0.0",
-    "jest": "^24.9.0",
-    "nodemon": "^1.19.2",
-    "supertest": "^4.0.2"
-  },
   "dependencies": {
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "knex": "^0.19.4",
     "sqlite3": "^4.1.0"
+  },
+  "devDependencies": {
+    "cross-env": "^6.0.0",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.2",
+    "supertest": "^4.0.2"
   }
 }
